<resources>
    <string name="app_name">GastoCombustivel</string>
    <string name="welcome">Olá, bem vindo.\n\nCalcule o gasto de sua viagem.</string>
    <string name="origin_and_destination">Insira a cidade de origem e destino:</string>
    <string name="origin">Origem</string>
    <string name="destination">Destino</string>
    <string name="next">Proximo</string>
    <string name="distance">Distância</string>
    <string name="price_for_litter">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_for_litter">Km por litro</string>
    <string name="calculate">Calcular</string>
    <string name="result">R$: 0</string>
    <string name="destination_result">📍Destino:</string>
    <string name="distance_total_result">🛣️Distância Total:</string>
    <string name="label_total">Seu gasto total será de:</string>
</resources>