<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:drawableEnd="@color/white"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:fontFamily="@font/montserrat_medium"
            android:background="@drawable/circular_border"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="250dp">
    </TextView>

    <TextView
            android:text="@string/origin_and_destination"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="315dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </TextView>

    <EditText
            android:id="@+id/text_origin"
            android:layout_marginTop="400dp"
            android:hint="@string/origin"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </EditText>


    <EditText
            android:id="@+id/text_detination"
            android:layout_marginTop="500dp"
            android:hint="@string/destination"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </EditText>

    <Button
            android:id="@+id/button_next"
            android:text="@string/next"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:layout_marginTop="650dp"
            app:cornerRadius="4dp"
            android:backgroundTint="@color/purple"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </Button>
</RelativeLayout>